# strings

./: LICENSE  README.md
rabbitmq-celery/: .gitignore  README.md  docker-compose.yml  pyproject.toml
rabbitmq-celery/src/: consumer.py  producer.py
